Remove '.' from Player names to make it consistent across sources

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   <link rel="icon" href="data:;base64,iVBORw0KGgo=">
 </head>
 <body>
-  <input id="positions" type="file">
+  <div>
+    <input id="positions" type="file">
+    <button class="reset">Reset Hidden Players</button>
+  </div>
   <div id="tierLists">
   </div>
   <script type="module" src="app.js"></script>
